[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Mediuam_Asteroid_Rock.tres" type="Texture" id=1]
[ext_resource path="res://Asteroid.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="Animation" id=3]
resource_name = "OnLoad"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Asteroid" type="RigidBody2D" groups=["Asteroid"]]
collision_mask = 31
input_pickable = true
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
angular_velocity = 1.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="SpritePivot" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color( 1, 0.8, 0.8, 1 )

[node name="Sprite" type="Sprite" parent="SpritePivot"]
material = SubResource( 2 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
polygon = PoolVector2Array( -5, -12, -11, -9, -12, -4, -10, 4, -5, 11, 6, 13, 12, 9, 13, 3, 9, -2, 10, -8, 5, -12, -1, -11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "OnLoad"
anims/OnLoad = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Asteroid_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Asteroid_input_event"]
